# Generated by Django 5.2.4 on 2025-10-02 13:59

import django.db.models.deletion
import uuid
from django.conf import settings
from django.db import migrations, models


class Migration(migrations.Migration):

    dependencies = [
        ('api', '0001_initial'),
    ]

    operations = [
        migrations.CreateModel(
            name='Project',
            fields=[
                ('project_id', models.UUIDField(default=uuid.uuid4, editable=False, primary_key=True, serialize=False)),
                ('name', models.CharField(max_length=255)),
            ],
        ),
        migrations.CreateModel(
            name='ProjectAssignedUser',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('project', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='api.project')),
                ('user', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to=settings.AUTH_USER_MODEL)),
            ],
            options={
                'unique_together': {('user', 'project')},
            },
        ),
        migrations.AddField(
            model_name='project',
            name='assigned_users',
            field=models.ManyToManyField(related_name='projects', through='api.ProjectAssignedUser', to=settings.AUTH_USER_MODEL),
        ),
        migrations.CreateModel(
            name='Task',
            fields=[
                ('task_id', models.UUIDField(default=uuid.uuid4, editable=False, primary_key=True, serialize=False)),
                ('name', models.TextField()),
                ('description', models.TextField(blank=True)),
                ('deadline', models.DateTimeField()),
                ('status', models.CharField(choices=[('to_do', 'To Do'), ('pending', 'Pending'), ('ready', 'Ready'), ('in_progress', 'In Progress'), ('in_review', 'In Review'), ('testing', 'Testing')], default='to_do', max_length=20)),
                ('priority', models.CharField(choices=[('low', 'Low'), ('medium', 'Medium'), ('high', 'High')], default='medium', max_length=10)),
                ('project', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='tasks', to='api.project')),
            ],
        ),
        migrations.CreateModel(
            name='TaskAssignedUser',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('task', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='api.task')),
                ('user', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to=settings.AUTH_USER_MODEL)),
            ],
            options={
                'unique_together': {('user', 'task')},
            },
        ),
        migrations.AddField(
            model_name='task',
            name='assigned_users',
            field=models.ManyToManyField(related_name='tasks', through='api.TaskAssignedUser', to=settings.AUTH_USER_MODEL),
        ),
        migrations.CreateModel(
            name='TaskRelation',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('relation_type', models.CharField(choices=[('start_to_start', 'Start to Start'), ('start_to_finish', 'Start to Finish'), ('finish_to_start', 'Finish to Start'), ('finish_to_finish', 'Finish to Finish')], max_length=20)),
                ('child_task', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='parents', to='api.task')),
                ('parent_task', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='children', to='api.task')),
            ],
            options={
                'unique_together': {('parent_task', 'child_task')},
            },
        ),
    ]
